	 nobody used password protected files for a long time. This means
	 that in future version of FSP I can change protocol definition
	 without worry about breaking anything
	path with trailing / or starting / is now parsed correctly
	pathes with dot after slash are now detected at parse level (side
	 effect of prev. fix)
	tests moved from server/ into tests/ directory
	
Version 2.8.1b17 -- 17 Nov 2003 
	Allow filenames with spaces inside
	check for fork() and setsid() in configure.ac
	wu-ftpd compatible `xferlog` -- usernames are not supported, all
	  transfers are logged as anonymous
	flex output is included in the distribution archive, you do not
	need flex to build fsp
	MACHINES file updated

Version 2.8.1b16 -- 8 Nov 2003 
	This version fixes 2 major bugs in beta 15 release.
	fspd: update mtime for directory listing after .FSP_CONTENT write
	flscmd: do not list file size > 2GB as negative, same for block count
	fspscan: install it when doing make install
	fspd: -l logfile switch
	fixed crash when logfile is in use. (from betat15)
	fixed memory leak in client/util.c:get_dir_blk
	fixed memory leak in client/util.c:open_dir
	fixed error from 2.8.1b15 in util_stat which brokes recursive
	 directory listings
	do not delete partial file on FSP timeout in fgetcmd

Version 2.8.1b15 -- 15 Oct 2003 
        Sven writes manpage for fspscan.1
	junked concept of private directory, now directory has flag
	 +g - public can get files
	dir_priv -> dir_get
	fprocmd flags changed +p -> -g (incompatible change in protocol)
	fgetprocmd works in private directories. There are no more
	 private.
	.FSP_PRIVATE -> .FSP_NO_GET for avoiding user confusion because
	 i have axed marking directories as private in beta6
	fixed off-by-one error in getpro cmd
	fsetpro cmd shows command syntax on error
	fspd: do not save readme files to disk (avoids truncation them
	 to 1k)
	fspd: fixed reply for makedir command (size of reply block was
	 not included)