@@ -7,6 +7,7 @@ config.cache
 config.guess
 config.log
 config.status
+configure.lineno
 config.sub
 configure
 depcomp
